# slack-workspace-synth

./: .gitignore  AGENTS.md  CHANGELOG.md  CLONE_FEATURES.md  Dockerfile  INCIDENTS.md  Makefile  PLAN.md  PRODUCT_ROADMAP.md  PROJECT_MEMORY.md  README.md  UPDATE.md  pyproject.toml
.github/workflows/: ci.yml
docs/: AGENTS.md  BENCHMARKS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  ENTERPRISE_GRID_SEEDING.md  PLAN.md  PLUGIN_API.md  PROJECT.md  RELEASE.md  ROADMAP.md  SECURITY.md
examples/: sample_plugin.py
scripts/: bench.py
src/slack_workspace_synth/: api.py  cli.py  generator.py  models.py  plugins.py  storage.py
tests/: test_api_cursor.py  test_cli_channel_map.py  test_cli_export_jsonl_filters.py  test_cli_generate_validation.py  test_cli_import.py  test_cli_oauth_pack.py  test_cli_provision_slack.py  test_cli_seed_import.py  test_cli_seed_live.py  test_cli_stats.py  test_cli_validate_db.py  test_generator.py  test_generator_determinism.py  test_metadata.py  test_oauth_token_io.py  test_slack_retry.py
