[project]
name = "slack-workspace-synth"
version = "0.1.3"
description = "Synthetic Slack-like workspace generator with SQLite storage and a read-only API."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [{name = "Sarvesh Kapre"}]
keywords = ["synthetic-data", "slack", "generator", "sqlite", "fastapi"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3.11",
]
dependencies = [
  "fastapi>=0.111.0",
  "uvicorn>=0.30.0",
  "faker>=24.0.0",
  "typer>=0.12.0",
  "pydantic>=2.6.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27.0",
  "pytest>=8.0.0",
  "ruff>=0.6.0",
  "mypy>=1.10.0",
  "build>=1.2.0",
  "types-setuptools",
]

[project.scripts]
swsynth = "slack_workspace_synth.cli:app"

[build-system]
requires = ["setuptools>=69.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["B008"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
